# MOVED__rustetris

./: Cargo.toml  README.md  index.html
src/: main.rs
src/components/: gamebox.rs  main.rs
src/contants/: color.rs  mod.rs
src/functions/: mod.rs  render.rs  valid_mino.rs
src/game/: clear_info.rs  game_info.rs  game_record.rs  manager.rs  mod.rs  point.rs  spin_type.rs  tetris_board.rs
src/game/board/: mod.rs  tetris_board.rs  tetris_cell.rs
src/game/calculate/: mod.rs  score.rs  valid_mino.rs
src/game/minos/: colors.rs  shapes.rs
src/js_bind/: body.rs  mod.rs  request_animation_frame.rs  window.rs
src/minos/: colors.rs  mod.rs  shapes.rs
src/options/: game_option.rs
src/types/: bag.rs  game_info.rs  mod.rs  point.rs  tetris_board.rs  tetris_cell.rs
src/util/: mod.rs  rotate.rs  valid_mino.rs
src/wasm_bind/: render.rs
src/wasm_bindgen/: draw.rs  mod.rs  render_loop.rs
